# readwise-learn-words

./: README.md  pyproject.toml  synced_words.json
src/: main.py  models.py  secrets.py
src/readwise_language_learn/: __init__.py  dictionary.py  main.py  secrets.py  wikitionary.py
